--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,2 @@
 # n8n Webhook Configuration
-NEXT_PUBLIC_N8N_WEBHOOK_URL=http://localhost:5678/webhook/validate
+NEXT_PUBLIC_N8N_WEBHOOK_URL=http://localhost:5678/webhook-test/verify-website
