--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,5 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "outputDirectory": ".next",
-  "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_N8N_WEBHOOK_URL": "@n8n_webhook_url"
-  }
+  "regions": ["iad1"]
 }
